--- a/Exploro/src/app/pages/classifica/classifica.page.html
+++ b/Exploro/src/app/pages/classifica/classifica.page.html
@@ -8,3 +8,48 @@
     routerLink="/homepage"
   ></ion-icon>
 </ion-toolbar>
+
+<ion-content>
+  <ion-segment
+    (ionChange)="TipoClassifica($event)"
+    value="globale"
+    color="warning"
+  >
+    <ion-segment-button value="globale" checked> Globale </ion-segment-button>
+    <ion-segment-button value="amici"> Amici </ion-segment-button>
+  </ion-segment>
+  <ion-list style="margin-top: 20px">
+    <ion-item lines="none" class="header-row">
+      <ion-label>Pos</ion-label>
+      <ion-label>Nome</ion-label>
+      <ion-label>Cache trovate</ion-label>
+    </ion-item>
+    <ion-item
+      *ngFor="let utente of listaUtenti; let i = index"
+      [ngClass]="{'highlighted-item': utente.id === idUtente}"
+    >
+      <ion-label>{{ i+1 }}°</ion-label>
+      <ion-label>{{ utente.username }}</ion-label>
+      <ion-label style="text-align: center"
+        >{{ utente.cacheTrovate.length }}</ion-label
+      >
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<!-- <ion-content>
+  <ion-list>
+    <ion-item lines="none" class="header-row">
+      <ion-label>Pos</ion-label>
+      <ion-label>Nome</ion-label>
+      <ion-label>Cache trovate</ion-label>
+      <ion-label>Livello</ion-label>
+    </ion-item>
+    <ion-item *ngFor="let utente of listaUtenti; let i = index">
+      <ion-label>{{ i+1 }}°</ion-label>
+      <ion-label>{{ utente.nome }}</ion-label>
+      <ion-label>{{ utente.puntiExp }}</ion-label>
+      <ion-label>{{ utente.livello }}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content> -->
