--- a/Exploro/src/app/pages/classifica/classifica.page.html
+++ b/Exploro/src/app/pages/classifica/classifica.page.html
@@ -19,7 +19,7 @@
     <ion-segment-button value="amici"> Amici </ion-segment-button>
   </ion-segment>
   <ion-list style="margin-top: 20px">
-    <ion-item lines="none" class="header-row">
+    <ion-item class="header-row">
       <ion-label>Pos</ion-label>
       <ion-label>Nome</ion-label>
       <ion-label>Cache trovate</ion-label>
@@ -27,6 +27,7 @@
     <ion-item
       *ngFor="let utente of listaUtenti; let i = index"
       [ngClass]="{'highlighted-item': utente.id === idUtente}"
+      (click)="VisualizzaUtente(utente)"
     >
       <ion-label>{{ i+1 }}°</ion-label>
       <ion-label>{{ utente.username }}</ion-label>
@@ -36,20 +37,3 @@
     </ion-item>
   </ion-list>
 </ion-content>
-
-<!-- <ion-content>
-  <ion-list>
-    <ion-item lines="none" class="header-row">
-      <ion-label>Pos</ion-label>
-      <ion-label>Nome</ion-label>
-      <ion-label>Cache trovate</ion-label>
-      <ion-label>Livello</ion-label>
-    </ion-item>
-    <ion-item *ngFor="let utente of listaUtenti; let i = index">
-      <ion-label>{{ i+1 }}°</ion-label>
-      <ion-label>{{ utente.nome }}</ion-label>
-      <ion-label>{{ utente.puntiExp }}</ion-label>
-      <ion-label>{{ utente.livello }}</ion-label>
-    </ion-item>
-  </ion-list>
-</ion-content> -->
