--- a/Exploro/src/app/pages/profilo/profilo.page.scss
+++ b/Exploro/src/app/pages/profilo/profilo.page.scss
@@ -13,20 +13,9 @@ ion-label {
   margin-bottom: 20px;
 }
 
-ion-button.button-orange {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 200px;
-  margin-bottom: 15px;
+ion-button {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+  text-align: center;
 }
-
-// .bottom-button {
-//   position: fixed;
-//   bottom: 0;
-//   left: 50%;
-//   transform: translateX(-50%);
-//   margin-bottom: 15px;
-// }
