--- a/Exploro/src/app/app.component.html
+++ b/Exploro/src/app/app.component.html
@@ -22,7 +22,12 @@
           </ion-item>
           <ion-item routerLink="amici">
             <ion-icon name="earth"></ion-icon>
-            <ion-badge slot="start" color="danger" style="position: absolute;top: 20%;left: 40%;" id="badgeNotifiche">11</ion-badge>
+            <ion-badge
+              slot="start"
+              color="danger"
+              style="position: absolute; top: 20%; left: 40%"
+              id="badgeNotifiche"
+            ></ion-badge>
             <ion-label>Amici</ion-label>
           </ion-item>
           <ion-item routerLink="/login" (click)="Logout()">
