--- a/Exploro/src/app/pages/amici/amici.page.html
+++ b/Exploro/src/app/pages/amici/amici.page.html
@@ -8,3 +8,23 @@
     routerLink="/homepage"
   ></ion-icon>
 </ion-toolbar>
+
+<ion-content>
+  <ion-list>
+    <ion-item-sliding *ngFor="let richiesta of listRichieste; let i = index">
+      <ion-item>
+        <ion-label>{{ Gchiede[i] }}</ion-label>
+        <ion-icon name="arrow-back" slot="end"></ion-icon>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="success" (click)="AccettaRichiesta(richiesta)">
+          Accetta
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="RifiutaRichiesta(richiesta)">
+          Rifiuta
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+</ion-content>
